--- a/test.html
+++ b/test.html
@@ -128,8 +128,8 @@ var test = print(apply(function(x) { return x*2;},time));
 var deg = apply(function(x) { return x % 360; },time);
 
 
-function rot (node,s) { 
-    return function(t) { rotate(lift(node)(t),lift(s)(t),250,250); return lift(node)(t); }
+function rot (node,s,cx,cy) { 
+    return function(t) { rotate(lift(node)(t),lift(s)(t),cx,cy); return lift(node)(t); }
 }
 
 function trans (node,x,y) { 
@@ -144,13 +144,30 @@ function waggle (amp) {
     return function(t) { return amp * Math.cos(t); };
 }
 
+function elt (id) { 
+    var e = document.getElementById(id);
+    return function(t) { return e; }
+}
+
+function threshold (s1,thres,s2) {
+    return function(t) { 
+	if (t<thres) {
+	    return s1(t);
+	} else {
+	    return s2(t);
+	}
+    }
+}
+    
 
 function run () { 
 
     console.log("Ready to animate");
 
-    var rotR1 = faster(0.50,rot(r1,deg));
-    var circR1 = trans(rotR1,faster(0.01,wiggle(100)),faster(0.01,waggle(100)));
+    var rotR1 = faster(0.50,rot(elt("r1"),deg,250,250));
+    var rotR2 = faster(0.30,rot(elt("r2"),mult(-1,deg),750,250));
+    var r = threshold(rotR1,5000,rotR2);
+    var circR1 = trans(r,faster(0.01,wiggle(100)),faster(0.01,waggle(100)));
 
     animate(circR1,10000);
 
@@ -159,8 +176,9 @@ function run () {
     </script>
   </head>
   <body>
-    <svg height="500" width="500" style="border: 1px solid grey;">
+    <svg width="1000" height="500" style="border: 1px solid grey;">
         <rect id="r1" x="200" y="200" height="100" width="100" fill="red"></rect>
+        <rect id="r2" x="700" y="200" height="100" width="100" fill="blue"></rect>
     </svg>
 
   </body>
