--- a/test.html
+++ b/test.html
@@ -150,8 +150,12 @@ function elt (id) {
 }
 
 function threshold (s1,thres,s2) {
+    var start = null;
     return function(t) { 
-	if (t<thres) {
+	if (!start) { 
+	    start = t;
+	}
+	if (t-start<thres) {
 	    return s1(t);
 	} else {
 	    return s2(t);
@@ -171,7 +175,19 @@ function over () {
 	return results;
     }
 }
-    
+
+function delay (d,s) { 
+    var start = null;
+    return function(t) { 
+	if (!start) { 
+	    start = t;
+	}
+	if (t-start >= d) {
+	    return s(t);
+	}
+    }
+}
+
 
 function run () { 
 
@@ -180,9 +196,13 @@ function run () {
     var rotR1 = faster(0.50,rot(elt("r1"),deg,250,250));
     var rotR2 = faster(0.30,rot(elt("r2"),mult(-1,deg),750,250));
     var r = threshold(rotR1,5000,rotR2);
-    var circR1 = trans(rotR1,faster(0.01,wiggle(100)),faster(0.01,waggle(100)));
+    var circR1 = threshold(trans(rotR1,faster(0.01,wiggle(100)),faster(0.01,waggle(100))),
+			   5000,
+			   trans(rotR1,
+				 faster(0.015,wiggle(100)),
+				 faster(0.015,waggle(100))));
 
-    var t = over(circR1,rotR2);
+    var t = over(delay(1000,circR1),rotR2);
 
     animate(t,10000);
 
