--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@ function time () {
 function time (t) { return t; }
 
 function faster (r,s) {
-    return function (t) { return s(t * r); };
+    return function (t) { return s(t * lift(r)(t)); };
 }
 
 function lift (v) { 
@@ -58,11 +58,6 @@ function translate (node,x,y) {
     var s = d3.select(node);
     setRotationTranslation(node,data.r,x,y,data.rx,data.ry);
 }
-
-
-function wiggle (t) { return sin(t); }
-
-function waggle (t ) { return cos(t); }
 
 
 function add (s1,s2) { 
@@ -136,12 +131,12 @@ function trans (node,x,y) {
     return function(t) { translate(lift(node)(t),lift(x)(t),lift(y)(t)); return lift(node)(t);}
 }
 
-function wiggle (amp) {
-    return function(t) { return amp * Math.sin(t); };
+function wiggle (t) { 
+    return Math.sin(t);
 }
 
-function waggle (amp) { 
-    return function(t) { return amp * Math.cos(t); };
+function waggle (t) { 
+    return Math.cos(t);
 }
 
 function elt (id) { 
@@ -182,6 +177,16 @@ function delay (d,s) {
 }
 
 
+function rampTo (n,d) { 
+    return function(t) { 
+	if (t<d) { 
+	    return (n*t/d);
+	}
+	return n;
+    }
+}
+	
+
 // invariant: 
 //  time is always local to a behavior
 //  behavior always starts @ t = 0
@@ -193,15 +198,17 @@ function run () {
     var rotR1 = faster(0.50,rot(elt("r1"),deg,250,250));
     var rotR2 = faster(0.30,rot(elt("r2"),mult(-1,deg),750,250));
     var r = threshold(rotR1,5000,rotR2);
-    var circR1 = threshold(trans(rotR1,faster(0.01,wiggle(100)),faster(0.01,waggle(100))),
+    var circR1 = threshold(trans(rotR1,
+				 mult(rampTo(100,1000),faster(0.01,wiggle)),
+				 mult(rampTo(100,1000),faster(0.01,waggle))),
 			   5000,
 			   trans(rotR1,
-				 faster(0.015,wiggle(100)),
-				 faster(0.015,waggle(100))));
+				 faster(add(0.01,rampTo(0.005,1000)),mult(100,wiggle)),
+				 faster(add(0.01,rampTo(0.005,1000)),mult(100,waggle))));
 
     var t = over(delay(1000,circR1),rotR2);
 
-    animate(t,20000);
+    animate(t)  //,20000);
 
 }
       
