--- a/demo3.html
+++ b/demo3.html
@@ -1,6 +1,8 @@
 <html>
   <head>
 
+    <meta charset="UTF-8">
+
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script src="svg-anim.js" charset="utf-8"></script>
@@ -8,11 +10,6 @@
     <script>
 
 window.addEventListener("load",run);
-
-function setup_and_run () { 
-    loadExternalSVG("smiley.svg","target_smiley",run);
-}
-
 
 function spin (b,cx,cy,speed) {
     return rotate(b,faster(speed,deg),cx,cy);
@@ -35,31 +32,16 @@ function run () {
 
     console.log("Ready to animate");
 
+    var red = element("red",300,300);
+    var blue = element("blue",300,300);
+    
+    var combo = spin(overlay(pulse(blue),
+				   orbit(red,200,100)),
+		     300,300,0.05);
+
+    animate(combo);
+
     return;
-
-    var orbit1 = element("c1",500,250);
-    var orbit2 = faster(0.01,translate(element("c2",500,250),
-				       mult(25,wiggle),
-				       mult(60,waggle)));
-
-    var orbit3 = faster(0.005,translate(element("c2a",500,250),
-				       mult(70,wiggle),
-				       mult(40,waggle)));
-
-    var orbit = overlay(orbit1, orbit2, orbit3);
-
-    var pendulum = function(x) { return translate(x,faster(0.002,mult(200,wiggle)),0); }
-
-    t = rotate(pendulum(orbit),
-	       faster(0.02,mult(-1,deg)),
-	       500,250);
-
-    t = overlay(t,faster(0.1,pendulum(overlay(rotate(faster(10,pendulum(element("smiley",500,250))),
-					   faster(0.3,deg),
-					   500,250),
-					      element("c3",10,10)))));
-				   
-    animate(t)
 }
 
 
@@ -70,18 +52,12 @@ function run () {
 
   <body>
 
-    <svg width="500" height="500" style="border: 1px solid grey;">
+    <svg width="600" height="600" style="border: 1px solid grey;">
 
-        <circle id="red" cx="250" cy="250" r="10" fill="red" />
+        <circle id="red" cx="300" cy="300" r="10" fill="red" />
 
-	<rect id="blue" x="220" y="220" width="60" height="60" fill="blue" />
-<!--
-	<circle id="c1" cx="500" cy="250" r="20" fill="grey" />
-	<circle id="c2" cx="500" cy="250" r="5" fill="black" />
-	<circle id="c2a" cx="500" cy="250" r="5" fill="black" />
-	<circle id="c3" cx="500" cy="250" r="200" fill="none" stroke="blue" />
-        <g id="smiley"><g id="target_smiley" transform="translate(470,220) scale(3)"></g></g>
--->
+	<rect id="blue" x="270" y="270" width="60" height="60" fill="blue" />
+
     </svg>
 
   </body>
