--- a/demo3.html
+++ b/demo3.html
@@ -3,8 +3,7 @@
 
     <meta charset="UTF-8">
 
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-
+    <script src="d3.v3.min.js" charset="utf-8"></script>
     <script src="svg-anim.js" charset="utf-8"></script>
 
     <script>
